# cagrex

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: python-test.yml
cagrex/: __init__.py  cagr.py
tests/: course_test.py  general_parsing_test.py  test_class_members.py  util.py
tests/assets/: class_row.html  class_table.html
