[tool.poetry]
name = "cagrex"
version = "0.4.3"
description = "CAGR Explorer"
authors = ["Caravela Hacker Club"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
mechanicalsoup = "^0.11.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
