[tool.poetry]
name = "cagrex"
version = "0.4.3"
description = "CAGR Explorer"
authors = ["Caravela Hacker Club"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
mechanicalsoup = "^1.3.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.6.4"
pylint = "^2.6.0"
black = "^20.8b1"
pylint-fail-under = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
