[tool.poetry]
name = "cagrex"
version = "0.4.3"
description = "CAGR Explorer"
authors = ["Caravela Hacker Club"]

[tool.poetry.dependencies]
python = ">=3.11"
requests = "^2.22"
mechanicalsoup = "^1.3.0"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.6.4"
pylint = "^3.0.3"
black = "^23.12.1"
pylint-fail-under = "^0.3.0"
mypy = "^1.8.0"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line_length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
